fixed quality issue raised by sonarqube
Signed-off-by: Pratik Mahalle <mahallepratik683@gmail.com>